--- a/payment.html
+++ b/payment.html
@@ -5,8 +5,48 @@
 </head>
 <body>
     <img src="assests/images/logo.png" height="200px" width="150px" alt="logo" />
-    <h2>Header Div</h2>
-    <h2>Content Div</h2>
-    <h2>Footer Div</h2>
+    <!--<h2>Header Div</h2>-->
+    <a href="login.html" target="_blank"> Login </a>
+    <br>
+
+    <!--<h2>Content Div</h2>-->
+    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"/>
+    <br>
+    <h3>Radisson Blu Hotel</h3>
+    <em>#38 of 1,289 hotels in New Delhi</em>
+    <br>
+    <br>
+    <em>Nh 8, near Mahipalpur Extension, Block R, Mahipalpur Village, Mahipalpur, New Delhi, Delhi 110037</em>
+    <br>
+    <br>
+    <Strong>Name:</Strong><em> John Doe</em>
+    <br>
+    <br>
+    <Strong>Number of Adults:</Strong><em> 2</em>
+    <br>
+    <br>
+    <Strong>Check-in Date:</Strong><em> 19/10/2021</em>
+    <br>
+    <br>
+    <Strong>Check-out Date:</Strong><em> 21/10/2021</em>
+    <br>
+    <br>
+    <Strong>Tariff Breakdown:</Strong><em> Rs.1000 * 2 Adults * 5 Nights</em>
+    <br>
+    <br>
+    <Strong>Total Amount:</Strong><em> Rs.10000</em>
+    <br>
+    <br>
+    <a href="payment.html">Pay Now</a>
+    <br>
+
+    <!--<h2>Footer Div</h2>-->
+    <a href="contact.html" target="_blank"> Contact Us </a>
+    <br>
+    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
+    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
+    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" height="20px" width="22px" /></a>
+    <br>
+    <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
 </body>
 </html>
