--- a/detail.html
+++ b/detail.html
@@ -5,8 +5,37 @@
 </head>
 <body>
     <img src="assests/images/logo.png" height="200px" width="150px" alt="logo" />
-    <h2>Header Div</h2>
-    <h2>Content Div</h2>
-    <h2>Footer Div</h2>
+    <!--<h2>Header Div</h2>-->
+    <a href="login.html" target="_blank"> Login </a>
+    <br>
+
+    <!--<h2>Content Div</h2>-->
+    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"></a>
+    <br>
+    <a href="payment.html"><small>BOOK NOW</small></a>
+    <h2>Radisson Blu Hotel</h2>
+    <small>RATING</small>
+    <br><br>
+    <small>5 Star</small>
+    <br><br>
+    <small>AMENITIES</small>
+    <ul>
+        <li>Room Service</li>
+        <li>Restaurant</li>
+        <li>Fitness Center</li>
+        <li>Business Center</li>
+        <li>Pool</li>
+    </ul>
+    <h5>DESCRIPTION</h5>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe explicabo dignissimos odio facere similique numquam optio obcaecati ab quos, illum cupiditate error architecto, laboriosam quibusdam maiores nostrum! Possimus, quibusdam tenetur.</p>
+ 
+    <!--<h2>Footer Div</h2>-->
+    <a href="contact.html" target="_blank"> Contact Us </a>
+    <br>
+    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
+    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
+    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" height="20px" width="22px" /></a>
+    <br>
+    <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
 </body>
 </html>
