--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
 </head>
 <body>
     <img src="assests/images/logo.png" height="200px" width="150px" alt="logo" />
-    <h2>Header Div</h2>
-    <h2>Content Div</h2>
-    <h2>Footer Div</h2>
+    <!--<h2>Header Div</h2>-->
+    <a href="login.html" target="_blank"> Login </a>
+
+    <!--<h2>Content Div</h2>-->
+    <br>
+    <strong>Search Bar</strong>
+    <br>
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300px" width="300px" alt="image" /> </a>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" height="300px" width="300px" alt="image" />
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" height="300px" width="300px" alt="image" />
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" height="300px" width="300px" alt="image" />
+    <br>
+    <a href="index.html"> View more >> </a>
+    <br>
+
+    <!--<h2>Footer Div</h2>-->
+    <a href="contact.html" target="_blank"> Contact Us </a>
+    <br>
+    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
+    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
+    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" height="20px" width="22px" /></a>
+    <br>
+    <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
 </body>
 </html>
