--- a/list.html
+++ b/list.html
@@ -5,8 +5,45 @@
 </head>
 <body>
     <img src="assests/images/logo.png" height="200px" width="150px" alt="logo" />
-    <h2>Header Div</h2>
-    <h2>Content Div</h2>
-    <h2>Footer Div</h2>
+    <!--<h2>Header Div</h2>-->
+    <a href="login.html" target="_blank"> Login </a>
+
+    <!--<h2>Content Div</h2>-->
+    <ul>
+        <a href="list.html"><li> List View </li></a>
+        <a href="list.html"><li>Map View</li></a>
+    </ul>
+    <a href="detail.html"><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"/></a>
+        <a href="detail.html"><h3>Radisson Blu Hotel</h3></a>
+        <a href="detail.html"><small>5 Star</small></a>
+        <br><br>
+        <a href="detail.html"><small>New Delhi</small></a>
+        <br><br>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg"></a>
+        <h3>The Lalit New Delhi</h3></a>
+        <small>5 Star</small></a>
+        <br><br>
+        <small>New Delhi</small>
+        <br><br>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg"></a>
+        <h3>Taj Palace</h3></a>
+        <small>4 Star</small></a>
+        <br><br>
+        <small>New Delhi</small>
+        <br>
+        <a href="Map View"><img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png"/> </a>
+        <br>
+        <sub>MAP VIEW</sub>
+        <br>
+        <br>
+    
+    <!--<h2>Footer Div</h2>-->
+    <a href="contact.html" target="_blank"> Contact Us </a>
+    <br>
+    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
+    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
+    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" height="20px" width="22px" /></a>
+    <br>
+    <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
 </body>
 </html>
