--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,18 @@
     <title>Contact</title>
 </head>
 <body>
-  <h1>CONTACT US</h1>  
+  <!--<h1>CONTACT US</h1>-->
+  <small>Thank you for reaching out!!!</small>
+  <br>
+  <br>
+  <small>Please enter your email and we will get back to you</small>
+  <br>
+  <br>
+  <form autocomplete="off" action="index.html" method="get">
+  <input type="Enter your email" placeholder="Enter your email" name="Enter your email" required>
+  <br>
+  <!-- <button type="submit"><strong>Submit</strong></button> -->
+<input type="submit" value="Submit">
+</form>
 </body>
 </html>
