--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 <body>
     <img src="assests/images/logo.png" height="200px" width="150px" alt="logo" />
     <!--<h2>Header Div</h2>-->
-    <a href="login.html" target="_blank"> Login </a>
+    <a href="login.html"> Login </a>
 
     <!--<h2>Content Div</h2>-->
     <br>
-    <strong>Search Bar</strong>
+    <!-- <strong>Search Bar</strong> -->
+    <input name="city" type=text placeholder="City"/>
     <br>
     <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300px" width="300px" alt="image" /> </a>
     <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" height="300px" width="300px" alt="image" />
@@ -21,7 +22,7 @@
     <br>
 
     <!--<h2>Footer Div</h2>-->
-    <a href="contact.html" target="_blank"> Contact Us </a>
+    <a href="contact.html"> Contact Us </a>
     <br>
     <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
     <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
