--- a/list.html
+++ b/list.html
@@ -4,9 +4,9 @@
     <title>List</title>
 </head>
 <body>
-    <img src="assests/images/logo.png" height="200px" width="150px" alt="logo" />
+    <a href="index.html"><img src="assests/images/logo.png" height="200px" width="150px" alt="logo" /></a>
     <!--<h2>Header Div</h2>-->
-    <a href="login.html" target="_blank"> Login </a>
+    <a href="login.html"> Login </a>
 
     <!--<h2>Content Div</h2>-->
     <ul>
@@ -38,7 +38,7 @@
         <br>
     
     <!--<h2>Footer Div</h2>-->
-    <a href="contact.html" target="_blank"> Contact Us </a>
+    <a href="contact.html"> Contact Us </a>
     <br>
     <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
     <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
