--- a/login.html
+++ b/login.html
@@ -4,6 +4,16 @@
     <title>Login</title>
 </head>
 <body>
-  <h1>LOGIN</h1>  
+  <!--<h1>LOGIN</h1>-->
+  <form autocomplete="off" method="get" action="index.html">
+  <label>Username : </label>   
+            <input type="text" placeholder="Enter Username" name="username" required>  
+            <br>
+            <label>Password : </label>   
+            <input type="password" placeholder="Enter Password" name="password" required>
+            <br>
+            <!-- <button type="submit">Login</button>-->
+            <a href="index.html"><input type="submit" value="Login"></a>
+          </form>
 </body>
 </html>
