--- a/payment.html
+++ b/payment.html
@@ -4,9 +4,9 @@
     <title>Payment</title>
 </head>
 <body>
-    <img src="assests/images/logo.png" height="200px" width="150px" alt="logo" />
+    <a href="index.html"><img src="assests/images/logo.png" height="200px" width="150px" alt="logo" /></a>
     <!--<h2>Header Div</h2>-->
-    <a href="login.html" target="_blank"> Login </a>
+    <a href="login.html"> Login </a>
     <br>
 
     <!--<h2>Content Div</h2>-->
@@ -41,7 +41,7 @@
     <br>
 
     <!--<h2>Footer Div</h2>-->
-    <a href="contact.html" target="_blank"> Contact Us </a>
+    <a href="contact.html"> Contact Us </a>
     <br>
     <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
     <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
