--- a/index.html
+++ b/index.html
@@ -2,32 +2,46 @@
 <html lang="en">
 <head>
     <title>Index</title>
+    <style>
+        html{
+            width:100%;
+            height:100%;
+        }
+        body{
+            width:100%;
+            height:100%;
+        }
+        div.container {
+            width: 500px;
+            height:100%;
+        }
+        </style>
 </head>
-<body>
-    <img src="assests/images/logo.png" height="200px" width="150px" alt="logo" />
-    <!--<h2>Header Div</h2>-->
-    <a href="login.html"> Login </a>
 
-    <!--<h2>Content Div</h2>-->
-    <br>
-    <!-- <strong>Search Bar</strong> -->
+<body>
+    <header class="w3-container">
+    <img src="assests/images/logo.png" style="height:60px;width:60px;" alt="logo" />
+    <a href="login.html"> Login </a>
+    </header>
+
     <input name="city" type=text placeholder="City"/>
     <br>
-    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300px" width="300px" alt="image" /> </a>
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" height="300px" width="300px" alt="image" />
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" height="300px" width="300px" alt="image" />
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" height="300px" width="300px" alt="image" />
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" style="height:150px;width:150px;" alt="image" /> </a>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" style="height:150px;width:150px;" alt="image" />
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" style="height:150px;width:150px;" alt="image" />
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" style="height:150px;width:150px;" alt="image" />
     <br>
     <a href="index.html"> View more >> </a>
     <br>
 
-    <!--<h2>Footer Div</h2>-->
+    <footer class="w3-container">
     <a href="contact.html"> Contact Us </a>
     <br>
-    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
-    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
-    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" height="20px" width="22px" /></a>
+    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" style="height:20px;width:22px;" /></a>
+    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" style="height:20px;width:22px;" /></a>
+    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
     <br>
     <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
+</footer>
 </body>
 </html>
