--- a/payment.html
+++ b/payment.html
@@ -2,15 +2,29 @@
 <html lang="en">
 <head>
     <title>Payment</title>
+    <style>
+        html{
+            width:100%;
+            height:100%;
+        }
+        body{
+            width:100%;
+            height:100%;
+        }
+        div.container {
+            width: 500px;
+            height:100%;
+        }
+        </style>
 </head>
 <body>
-    <a href="index.html"><img src="assests/images/logo.png" height="200px" width="150px" alt="logo" /></a>
-    <!--<h2>Header Div</h2>-->
-    <a href="login.html"> Login </a>
-    <br>
-
+    <header class="w3-container">
+    <a href="index.html"><img src="assests/images/logo.png" Style="height:60px;width:60px" alt="logo" /></a>
+    <a href="#login.html"> Login </a>
+    </header>
+    
     <!--<h2>Content Div</h2>-->
-    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"/>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" style="height:500px;width:500px;"/>
     <br>
     <h3>Radisson Blu Hotel</h3>
     <em>#38 of 1,289 hotels in New Delhi</em>
@@ -41,12 +55,14 @@
     <br>
 
     <!--<h2>Footer Div</h2>-->
-    <a href="contact.html"> Contact Us </a>
-    <br>
-    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
-    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
-    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" height="20px" width="22px" /></a>
-    <br>
-    <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
+    <footer class="w3-container">
+        <a href="contact.html"> Contact Us </a>
+        <br>
+        <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" style="height:20px;width:22px;" /></a>
+        <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" style="height:20px;width:22px;" /></a>
+        <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
+        <br>
+        <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
+    </footer>
 </body>
 </html>
