--- a/detail.html
+++ b/detail.html
@@ -2,15 +2,30 @@
 <html lang="en">
 <head>
     <title>Detail</title>
+    <style>
+        html{
+            width:100%;
+            height:100%;
+        }
+        body{
+            width:100%;
+            height:100%;
+        }
+        div.container {
+            width: 500px;
+            height:100%;
+        }
+        </style>
 </head>
 <body>
-    <a href="index.html"><img src="assests/images/logo.png" height="200px" width="150px" alt="logo" /></a>
-    <!--<h2>Header Div</h2>-->
+    <header class="w3-container"></header>
+    <a href="index.html"><img src="assests/images/logo.png" style="height:60px;width:60px;" alt="logo" /></a>
     <a href="login.html"> Login </a>
+    </header>
     <br>
 
     <!--<h2>Content Div</h2>-->
-    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"></a>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" style="height:500px;width:500px;"></a>
     <br>
     <form autocomplete="off" action="payment.html" method="get">
     <label for="adults">Adults:</label>
@@ -48,12 +63,14 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe explicabo dignissimos odio facere similique numquam optio obcaecati ab quos, illum cupiditate error architecto, laboriosam quibusdam maiores nostrum! Possimus, quibusdam tenetur.</p>
  
     <!--<h2>Footer Div</h2>-->
-    <a href="contact.html"> Contact Us </a>
-    <br>
-    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
-    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
-    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" height="20px" width="22px" /></a>
-    <br>
-    <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
+    <footer class="w3-container">
+        <a href="contact.html"> Contact Us </a>
+        <br>
+        <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" style="height:20px;width:22px;" /></a>
+        <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" style="height:20px;width:22px;" /></a>
+        <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
+        <br>
+        <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
+    </footer>
 </body>
 </html>
