--- a/list.html
+++ b/list.html
@@ -2,48 +2,70 @@
 <html lang="en">
 <head>
     <title>List</title>
+    <style>
+        html{
+            width:100%;
+            height:100%;
+        }
+        body{
+            width:100%;
+            height:100%;
+        }
+        div.container {
+            width: 500px;
+            height:100%;
+        }
+        </style>
 </head>
-<body>
-    <a href="index.html"><img src="assests/images/logo.png" height="200px" width="150px" alt="logo" /></a>
-    <!--<h2>Header Div</h2>-->
-    <a href="login.html"> Login </a>
 
-    <!--<h2>Content Div</h2>-->
+<body>
+    <header class="w3-container">
+        <a href="index.html"><img src="assests/images/logo.png" Style="height:60px;width:60px" alt="logo" /></a>
+        <a href="#login.html"> Login </a>
+        </header>
     <ul>
-        <a href="list.html"><li> List View </li></a>
-        <a href="list.html"><li>Map View</li></a>
+        <a href="#list view"><li> List View </li></a>
+        <a href="#map view"><li> Map View </li></a>
+            
+    <div class="list">
+            <section id="list view"></section>
+            <section id="map view"></section>
+            </div>
     </ul>
-    <a href="detail.html"><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"/></a>
+    </header>
+
+    <a href="detail.html"><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" style="height:250px;width:250px;"/></a>
         <a href="detail.html"><h3>Radisson Blu Hotel</h3></a>
         <a href="detail.html"><small>5 Star</small></a>
         <br><br>
         <a href="detail.html"><small>New Delhi</small></a>
         <br><br>
-        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg"></a>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" style="height:250px;width:250px;" /></a>
         <h3>The Lalit New Delhi</h3></a>
         <small>5 Star</small></a>
         <br><br>
         <small>New Delhi</small>
         <br><br>
-        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg"></a>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" style="height:250px;width:250px;" /></a>
         <h3>Taj Palace</h3></a>
         <small>4 Star</small></a>
         <br><br>
         <small>New Delhi</small>
         <br>
-        <a href="Map View"><img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png"/> </a>
+        <a href="map view"><img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png"/> </a>
         <br>
         <sub>MAP VIEW</sub>
         <br>
         <br>
     
-    <!--<h2>Footer Div</h2>-->
-    <a href="contact.html"> Contact Us </a>
-    <br>
-    <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" height="20px" width="22px" /></a>
-    <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" height="20px" width="22px" /></a>
-    <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" height="20px" width="22px" /></a>
-    <br>
-    <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
+    <footer class="w3-container">
+        <a href="contact.html"> Contact Us </a>
+        <br>
+        <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" style="height:20px;width:22px;" /></a>
+        <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" style="height:20px;width:22px;" /></a>
+        <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
+        <br>
+        <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
+    </footer>
 </body>
 </html>
