--- a/loader.html
+++ b/loader.html
@@ -2,8 +2,23 @@
 <html lang="en">
 <head>
     <title>Loader</title>
+    <style>
+      /* Center the loader diagram */
+      .loader{
+        width: 70px;
+        height: 70px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -50px 0px 0px -50px;
+        border-radius: 50%;
+        border: 12px solid #f3f3f3;
+        border-top: 12px solid #444444;
+       }
+    </style>
 </head>
 <body>
-  <h1>LOADER</h1>  
+  <div class="loader">
+    </div>
 </body>
 </html>
