--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
         html{
             width:100%;
             height:100%;
+            margin:0%;
         }
         body{
             width:100%;
             height:100%;
+            background-color:#e0e0e0;
+            margin:0%;
         }
         div.container {
             width: 500px;
             height:100%;
-        }
-        </style>
+            }
+            header{
+                background-color: rosybrown;
+            }
+            footer{
+                background-color: rosybrown;
+            }
+            .city{
+                background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
+                height:380px;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                position: relative;
+            }
+            .city-img{
+                text-align: center;
+                margin: 0% 15%;
+                padding: 4%;
+            }
+            </style>
 </head>
 
 <body>
@@ -24,13 +46,19 @@
     <a href="login.html"> Login </a>
     </header>
 
+    <div class="city">
     <input name="city" type=text placeholder="City"/>
+    </div>
     <br>
-    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" style="height:150px;width:150px;" alt="image" /> </a>
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" style="height:150px;width:150px;" alt="image" />
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" style="height:150px;width:150px;" alt="image" />
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" style="height:150px;width:150px;" alt="image" />
+
+    <div class="city-img" id="city-img">
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" /> </a>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
     <br>
+    </div>
+
     <a href="index.html"> View more >> </a>
     <br>
 
