--- a/payment.html
+++ b/payment.html
@@ -6,14 +6,38 @@
         html{
             width:100%;
             height:100%;
+            margin:0%;
         }
         body{
             width:100%;
             height:100%;
+            background-color:#e0e0e0;
+            margin:0%;
         }
         div.container {
             width: 500px;
             height:100%;
+        }
+        header{
+                background-color: rosybrown;
+        }
+        footer{
+                background-color: rosybrown;
+        }
+        .img{
+                background-color: rgb(132,136,139);
+                width: 50%;
+                height: 20;
+                margin: 2% auto;
+        }
+        .details{
+            margin: 2%;
+        }
+        .amt{
+            margin: 2%;
+            border: 1px solid black;
+            border-radius: 5px;
+            padding: 1% 2%;
         }
         </style>
 </head>
@@ -23,7 +47,7 @@
     <a href="#login.html"> Login </a>
     </header>
     
-    <!--<h2>Content Div</h2>-->
+    <div class="img">
     <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" style="height:500px;width:500px;"/>
     <br>
     <h3>Radisson Blu Hotel</h3>
@@ -31,8 +55,9 @@
     <br>
     <br>
     <em>Nh 8, near Mahipalpur Extension, Block R, Mahipalpur Village, Mahipalpur, New Delhi, Delhi 110037</em>
-    <br>
-    <br>
+    </div>
+   
+    <div class="details">
     <Strong>Name:</Strong><em> John Doe</em>
     <br>
     <br>
@@ -43,14 +68,14 @@
     <br>
     <br>
     <Strong>Check-out Date:</Strong><em> 21/10/2021</em>
-    <br>
-    <br>
+    </div>
+    <div class="amt">
     <Strong>Tariff Breakdown:</Strong><em> Rs.1000 * 2 Adults * 5 Nights</em>
     <br>
     <br>
     <Strong>Total Amount:</Strong><em> Rs.10000</em>
-    <br>
-    <br>
+    </div>
+    
     <a href="payment.html">Pay Now</a>
     <br>
 
