--- a/detail.html
+++ b/detail.html
@@ -2,28 +2,71 @@
 <html lang="en">
 <head>
     <title>Detail</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <style>
         html{
             width:100%;
             height:100%;
             margin:0%;
+            font-family: ubuntu, sans-serif;
         }
         body{
             width:100%;
             height:100%;
             background-color:#e0e0e0;
             margin:0%;
+            font-family:ubuntu, sans-serif;
         }
         div.container {
             width: 500px;
             height:100%;
         }
         header{
-                background-color: rosybrown;
-        }
+                background-color: rosybrown; 
+                height:50px;
+            }
+        header .img{
+            float: left-top;
+                display: inline-flex;
+         } 
+            header a{
+                color:black;
+                float: right;
+                display: inline-flex;
+                text-decoration: none;
+                vertical-align: text-bottom;
+            }
+            
             footer{
                 background-color: rosybrown;
-        }
+            }
+            footer a{
+                color:black;
+                display:inline;
+                justify-content:left;
+                text-decoration: none;
+            }
+            footer small{
+                font-size: 10px;
+                display:flex;
+                justify-content:center;
+            }
+            footer .social{
+                display:flex;
+                justify-content:right;
+            }
+            #header{
+                position:fixed;
+                width:100%;
+                left:0px;
+                top:0px;
+            }
+            #footer {
+                position:sticky;
+                width:100%;
+                bottom:0px;
+                top:auto;
+            }
         .img{
             margin: 2% 4% 0% 4%;
         }
@@ -36,12 +79,14 @@
         </style>
 </head>
 <body>
-    <header class="w3-container">
+    <header class="w3-container" id="header">
+        <div class="img">
     <a href="index.html"><img src="assests/images/logo.png" style="height:60px;width:60px;" alt="logo" /></a>
-    <a href="login.html"> Login </a>
+</div>
+<a href="login.html"> Login </a>
     </header>
     <br>
-
+  
     <!--<h2>Content Div</h2>-->
     <div class="img">
     <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" style="height:500px;width:500px;"></a>
@@ -86,12 +131,14 @@
     </div>
 
     <!--<h2>Footer Div</h2>-->
-    <footer class="w3-container">
+    <footer class="w3-container" id="footer">
         <a href="contact.html"> Contact Us </a>
         <br>
+        <div class="social">
         <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" style="height:20px;width:22px;" /></a>
         <a href="https://www.instagram.com" target="_blank"> <img src="assests/images/instagram.png" style="height:20px;width:22px;" /></a>
         <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
+        </div>
         <br>
         <small> &copy; 2021 ROOM SEARCH PVT.LTD.</small>
     </footer>
