--- a/loader.html
+++ b/loader.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Loader</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <style>
       /* Center the loader diagram */
       .loader{
@@ -15,6 +16,12 @@
         border: 12px solid #f3f3f3;
         border-top: 12px solid #444444;
        }
+      html{
+            font-family: ubuntu, sans-serif;
+        }
+        body{
+            font-family: ubuntu, sans-serif;
+        }
     </style>
 </head>
 <body>
