--- a/login.html
+++ b/login.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <style>
+      html{
+            font-family: ubuntu, sans-serif;
+        }
+        body{
+            font-family: ubuntu, sans-serif;
+        }
+    </style>
 </head>
 <body>
   <!--<h1>LOGIN</h1>-->
