--- a/list.html
+++ b/list.html
@@ -27,12 +27,14 @@
          #header .img{
             float: left;
                 display: inline-flex;
+                margin-left: 1%;
          }   
             #header a{
                 color:black;
                 float: right;
                 display: inline-flex;
                 text-decoration: none;
+                margin-right: 2%;
             }
             #footer{
                 background-color: rosybrown;
@@ -40,7 +42,7 @@
             .detail1, .detail2, .detail3{
                 width: 40%;
                 margin: 2%;
-                background-color: rgb(132,136,139);
+                background-color: lightgrey;
                 color:black;
                 float: left;
 	            padding:1px;
@@ -48,12 +50,12 @@
             .detail1 a{
                 color:black;
             }
-            
             #footer a{
                 color:black;
                 display:flex;
                 justify-content:left;
                 text-decoration: none;
+                margin-left: 2%;
             }
             #footer small{
                 font-size: 10px;
@@ -63,6 +65,7 @@
             #footer .social{
                 display:flex;
                 justify-content:right;
+                margin-right: 2%;
             }
             #header{
                 position:fixed;
@@ -76,17 +79,15 @@
                 bottom:0px;
                 top:auto;
             }
-            div.view{
+            #view ul li{
                 color: black;
                 text-decoration:none;
                 font-weight: bold;
                 text-align:center;
             }
-            div.view ul li{
-                display: inline;
-            }
             .map{
-               display: none;
+               display: inline-flex;
+               visibility: collapse;
             }
         </style>
 </head>
@@ -98,12 +99,13 @@
     </div>
     <a href="#login.html"> Login </a>
 </header>
-<div class="view">
+
 <ul>
+    <div class="view" id="view">
     <a href="#list view"><li> List View </li></a>
     <a href="#map view"><li> Map View </li></a>
-</ul>
 </div>
+</ul>
 <br>
 
     <div class="detail1">
@@ -129,13 +131,6 @@
         <br><br>
         <small>New Delhi</small>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-        <br>
-        <br>
-        <br>
         <br>
     
     <div class="map" id="map view">
