--- a/payment.html
+++ b/payment.html
@@ -25,15 +25,23 @@
                 background-color: rosybrown;
             }
          #header .img1{
+            margin-left: 2%;
             float: left;
                 display: inline-flex;
          }   
             #header a{
-                vertical-align: bottom;
+                display: flex;
+                margin-left: auto;
+                justify-content:right;
+                text-decoration: none;
+                color: black;
+                margin-right: 2%;
+                /* vertical-align: bottom;
                 color:black;
                 float: right;
-                display: inline-flex;
+                display:flex;
                 text-decoration: none;
+                margin-right: 2%; */
             }
             #footer{
                 background-color: rosybrown;
@@ -43,6 +51,7 @@
                 display:inline;
                 justify-content:left;
                 text-decoration: none;
+                margin-left: 2%;
             }
             #footer small{
                 font-size: 10px;
@@ -50,6 +59,7 @@
                 justify-content:center;
             }
             #footer .social{
+                margin-right: 2%;
                 display:flex;
                 justify-content:right;
             }
@@ -66,25 +76,39 @@
                 top:auto;
             }
         .img{
-                background-color: rgb(132,136,139);
-                width: 50%;
-                height: 20;
-                margin: 2% auto;
+            background-color: rgb(132, 136, 139);
+            display: flex;
+            align-items: center;
+            max-height: 300px;
+            max-width: 270px;
+            margin: 2% auto;
+            flex-flow: column wrap;
+            justify-content: center;
         }
         .details{
-            margin: 2%;
+            display: block;
+            margin-left: 2%;
+            margin-right: 2%;
+            background-color: rosybrown;
+            font-family: cursive;
+            border:1px solid black;
+            border-radius: 5px;
+            text-decoration: none;
+            flex-flow: column wrap;
         }
-        .amt{
+        /* .amt{
             margin: 2%;
             border: 1px solid black;
             border-radius: 5px;
             padding: 1% 2%;
+            background-color: rosybrown;
         }
         .pay a{
+            background-color: rosybrown;
             display: inline-flex;
             color: black;
             text-decoration: none;
-        }
+        } */
         </style>
 </head>
 <body>
@@ -94,6 +118,8 @@
 </div>
 <a href="#login.html"> Login </a>
     </header>
+    <br>
+    <br>
     <br>
     <br>
     <br>
@@ -117,15 +143,15 @@
     <Strong>Check-in Date:</Strong><em> 19/10/2021</em>
     <br>
     <Strong>Check-out Date:</Strong><em> 21/10/2021</em>
-    </div>
+    <!-- </div> -->
 
-    <div class="amt">
+    <!-- <div class="amt"> -->
     <Strong>Tariff Breakdown:</Strong><em> Rs.1000 * 2 Adults * 5 Nights</em>
     <br>
     <Strong>Total Amount:</Strong><em> Rs.10000</em>
-    </div>
+    <!-- </div> -->
     
-    <div class="pay">
+    <!-- <div class="pay"> -->
     <a href="payment.html">Pay Now</a>
 </div>
     <br>
