--- a/payment.html
+++ b/payment.html
@@ -3,6 +3,9 @@
 <head>
     <title>Payment</title>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <style>
         html{
             width:100%;
@@ -96,31 +99,47 @@
             text-decoration: none;
             flex-flow: column wrap;
         }
-        /* .amt{
-            margin: 2%;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding: 1% 2%;
-            background-color: rosybrown;
-        }
-        .pay a{
-            background-color: rosybrown;
-            display: inline-flex;
-            color: black;
-            text-decoration: none;
-        } */
         </style>
 </head>
 <body>
-    <header class="w3-container" id="header">
-        <div class="img1">
-    <a href="index.html"><img src="assests/images/logo.png" Style="height:60px;width:60px" alt="logo" /></a>
-</div>
-<a href="#login.html"> Login </a>
-    </header>
-    <br>
-    <br>
-    <br>
+    <div class="main-container">
+        <header class="w3-container" id="header">
+        <img src="assests/images/logo.png" style="height:60px;width:60px;" alt="logo" />
+        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#ModalLoginForm">Login</button></a>
+        <div id="ModalLoginForm" class="modal fade">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title">Please Login</h1>
+                    </div>
+                    <div class="modal-body">
+                        <form role="form" method="POST" action="">
+                            <input type="hidden" name="_token" value="">
+                            <div class="form-group">
+                                <label class="control-label">Username</label>
+                                <div>
+                                    <input type="email" class="form-control input-lg" name="email" value="">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Password</label>
+                                <div>
+                                    <input type="password" class="form-control input-lg" name="password">
+                                </div>
+                            </div>
+                                <div class="form-group">
+                                <div>
+                                    <button type="submit" class="btn btn-primary" data-dismiss="modal">
+                                        Login
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+            </header>
+        </div><!-- /.modal -->
     <br>
     <br>
        
@@ -151,14 +170,15 @@
     <Strong>Total Amount:</Strong><em> Rs.10000</em>
     <!-- </div> -->
     
-    <!-- <div class="pay"> -->
-    <a href="payment.html">Pay Now</a>
+    <div class="pay">
+    <a href="payment.html"><button type="button" class="btn btn-primary">Pay Now</button></a>
+</div>
 </div>
     <br>
 
     <!--<h2>Footer Div</h2>-->
     <footer class="w3-container" id="footer">
-        <a href="contact.html"> Contact Us </a>
+        <a href="contact.html"> <button type="button" class="btn btn-info btn-sm">Contact Us</button></a>
         <br>
         <div class="social">
         <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" style="height:20px;width:22px;" /></a>
