--- a/detail.html
+++ b/detail.html
@@ -3,6 +3,9 @@
 <head>
     <title>Detail</title>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <style>
         html{
             width:100%;
@@ -88,6 +91,9 @@
         .book, .am, h5{
             font-family: cursive;
         }
+        .btn:hover{
+            background-color: green;
+        }
         .book{
             display: flex;
             justify-content: center;
@@ -98,22 +104,54 @@
         </style>
 </head>
 <body>
-    <header class="w3-container" id="header">
-        <div class="img">
-    <a href="index.html"><img src="assests/images/logo.png" style="height:60px;width:60px;" alt="logo" /></a>
-</div>
-<a href="login.html"> Login </a>
-    </header>
-    <br>
-    <br>
-    <br>
-    <br>
-  
+    <div class="main-container">
+        <header class="w3-container" id="header">
+        <img src="assests/images/logo.png" style="height:60px;width:60px;" alt="logo" />
+        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#ModalLoginForm">Login</button></a>
+        <div id="ModalLoginForm" class="modal fade">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title">Please Login</h1>
+                    </div>
+                    <div class="modal-body">
+                        <form role="form" method="POST" action="">
+                            <input type="hidden" name="_token" value="">
+                            <div class="form-group">
+                                <label class="control-label">Username</label>
+                                <div>
+                                    <input type="email" class="form-control input-lg" name="email" value="">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Password</label>
+                                <div>
+                                    <input type="password" class="form-control input-lg" name="password">
+                                </div>
+                            </div>
+                                <div class="form-group">
+                                <div>
+                                    <button type="submit" class="btn btn-primary" data-dismiss="modal">
+                                        Login
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+            </header>
+        </div><!-- /.modal -->
+
+  <br>
+  <br>
     <!--<h2>Content Div</h2>-->
     <div class="img1" id="hotel">
         <div class="rad">
     <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" style="height:500px;width:500px;"></a>
     </div>
+    <br>
+    <br>
     <div class="form">
     <form autocomplete="off" action="payment.html" method="get">
     <label for="adults">Adults:</label>
@@ -132,7 +170,7 @@
     <input name="total" type="" readonly />
     <br>  
     <div class="book">
-    <a href="payment.html"><input type="submit" value="BOOK NOW"></a>
+    <a href="payment.html"><button type="button" class="btn btn-light">Book Now</button></a>
     </div>
 </div>
 </div>
@@ -143,7 +181,7 @@
     <br><br>
     <small>5 Star</small>
     <br>
-    
+
     <div class="am">
     <h5>AMENITIES</h5>
     </div>
@@ -160,7 +198,7 @@
 
     <!--<h2>Footer Div</h2>-->
     <footer class="w3-container" id="footer">
-        <a href="contact.html"> Contact Us </a>
+        <a href="contact.html"> <button type="button" class="btn btn-info btn-sm">Contact Us</button></a>
         <br>
         <div class="social">
         <a href="https://www.facebook.com" target="_blank"> <img src="assests/images/facebook.png" style="height:20px;width:22px;" /></a>
