--- a/detail.html
+++ b/detail.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         html{
             width:100%;
@@ -98,9 +99,10 @@
             display: flex;
             justify-content: center;
         }
-        /* .rad{
-            height:350px;
-        } */
+        .checked {
+            color: orange;
+        }
+
         </style>
 </head>
 <body>
@@ -178,10 +180,14 @@
     <div class="description">
     <h2>Radisson Blu Hotel</h2>
     <small>RATING</small>
-    <br><br>
-    <small>5 Star</small>
     <br>
-
+    <span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+    <br>
+    <br>
     <div class="am">
     <h5>AMENITIES</h5>
     </div>
