--- a/list.html
+++ b/list.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         html{
             width:100%;
@@ -53,6 +54,9 @@
             .detail1 a{
                 color:black;
             }
+            .checked {
+  color: orange;
+}
             #footer a{
                 color:black;
                 display:flex;
@@ -147,7 +151,13 @@
     <div class="detail1">
     <a href="detail.html"><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" style="height:250px;width:250px;"/></a>
         <a href="detail.html"><h3>Radisson Blu Hotel</h3></a>
-        <a href="detail.html"><small>5 Star</small></a>
+        <a href="detail.html">
+            <span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+        </a>
         <br><br>
         <a href="detail.html"><small>New Delhi</small></a>
     </div>
@@ -155,7 +165,11 @@
         <div class="detail2">
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" style="height:250px;width:250px;" /></a>
         <h3>The Lalit New Delhi</h3></a>
-        <small>5 Star</small></a>
+        <span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
         <br><br>
         <small>New Delhi</small>
     </div>
@@ -163,7 +177,11 @@
         <div class="detail3">
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" style="height:250px;width:250px;" /></a>
         <h3>Taj Palace</h3></a>
-        <small>4 Star</small></a>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star "></span></a>
         <br><br>
         <small>New Delhi</small>
     </div>
