--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
             #search:focus, input:focus{
                 outline:none;
             }
-            #img{
+            .city-img{
                 display: flex;
                 justify-content: space-between;
                 text-align: center;
                 margin: 0% 15%;
-                box-shadow: 10px 10px 10px grey;
+                /* box-shadow: 10px 10px 10px grey; */
             }
             .view a{
                 color:black;
@@ -107,9 +107,24 @@
                 display:flex;
                 justify-content:center;
             }
-            .overlay{
-                color: rgba(0, 0, 0, 0.5);
+            .overlay{ 
+            position: absolute; 
+            transition: 0.5s ease; 
+            height: 300px; 
+            width: 300px; 
+            top: 0; 
+            left: 20px; 
+            background-color: rgba(0, 0, 0, 0.5);
+	        opacity: 0;
+        } 
+        .city-img:hover.overlay{
+                opacity: 0.9;
             }
+        .txt {
+            position: absolute;
+            top: 17px;
+            left: 50px;
+        }
             </style>
 </head>
 
@@ -162,10 +177,43 @@
    
     <div class="city-img" id="img">
     <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" /> </a>
+    <h3 class="txt">
+        New-Delhi
+    </h3>
     <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <h3 class="txt">
+        Goa
+    </h3>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <h3 class="txt">
+        Hyderabad
+    </h3>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <h3 class="txt">
+        Kolkata
+    </h3>
     <div class="overlay"></div> 
+    </div>
+    <br>
+    <br>
+    <div class="city-img" id="img1">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+        <h3 class="txt">
+            Chennai
+        </h3>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/fc/agra.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+        <h3 class="txt">
+            Agra
+        </h3>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/10/a3/3b/8a/screenshot-2017-09-12.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+        <h3 class="txt">
+            Jaipur
+        </h3>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+        <h3 class="txt">
+            Bangalore
+        </h3>
+        <div class="overlay"></div> 
     </div>
     <br>
     <br>
