--- a/list.html
+++ b/list.html
@@ -150,6 +150,9 @@
     <div class="view" id="view">
     <a href="#list view"><button type="button" class="btn btn-light">List View</button></a>
     <a href="#map view"><button type="button" class="btn btn-light">Map View</button></a>
+    <script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjN2HozyHDE4ybD_IzOnzBwWlCefnYbwE&callback=initMap
+"></script>
 </div>
 <br>
 
