--- a/detail.html
+++ b/detail.html
@@ -120,7 +120,7 @@
     <div class="main-container">
         <!-- <header id="header"> -->
             <header class="header-footer">
-        <img src="assests/images/logo.png" class="logo" id="logo-image" style="Width:10%" alt="logo"/>
+        <img src="assests/images/logo.png" class="logo" id="logo-image" style="Width:100px" alt="logo"/>
                   <button type="button" id="login" class="btn btn-light btn-sm" data-toggle="modal"
                                   data-backdrop="false" data-target="#login-modal"
                                   onclick="headerLogin(event)">LOGIN</button>
