--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="main-container">
         <!-- <header id="header"> -->
             <header class="header-footer">
-        <img src="assests/images/logo.png" class="logo" id="logo-image" style="Width:10%" alt="logo"/>
+        <img src="assests/images/logo.png" class="logo" id="logo-image" style="Width:100px" alt="logo"/>
                   <button type="button" id="login" class="btn btn-light btn-sm" data-toggle="modal"
                                   data-backdrop="false" data-target="#login-modal"
                                   onclick="headerLogin(event)">LOGIN</button>
@@ -277,5 +277,7 @@
     <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
     </div>
 </footer>
+<script src="scripts/index.js"></script>
+      <script src="scripts/common.js"></script>
 </body>
 </html>
