--- a/payment.html
+++ b/payment.html
@@ -116,7 +116,7 @@
     <div class="main-container">
         <!-- <header id="header"> -->
             <header class="header-footer">
-        <img src="assests/images/logo.png" class="logo" id="logo-image" style="Width:10%" alt="logo"/>
+        <img src="assests/images/logo.png" class="logo" id="logo-image" style="Width:100pxs" alt="logo"/>
                   <button type="button" id="login" class="btn btn-light btn-sm" data-toggle="modal"
                                   data-backdrop="false" data-target="#login-modal"
                                   onclick="headerLogin(event)">LOGIN</button>
@@ -226,5 +226,7 @@
     <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
     </div>
 </footer>
+<script src="scripts/common.js"></script>
+        <script src="scripts/payment.js"></script>
 </body>
 </html>
