--- a/index.html
+++ b/index.html
@@ -187,43 +187,21 @@
    
     <div class="city-img" id="img">
     <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" /> </a>
-    <!-- <h3 class="txt">
-        New-Delhi
-    </h3> -->
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-    <!-- <h3 class="txt">
-        Goa
-    </h3> -->
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-    <!-- <h3 class="txt">
-        Hyderabad
-    </h3> -->
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-    <!-- <h3 class="txt">
-        Kolkata
-    </h3> -->
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    
     <div class="overlay"></div> 
     </div>
     <br>
     <br>
     <div class="city-img" id="img1">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-        <!-- <h3 class="txt">
-            Chennai
-        </h3> -->
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/fc/agra.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-        <!-- <h3 class="txt">
-            Agra
-        </h3> -->
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/10/a3/3b/8a/screenshot-2017-09-12.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-        <!-- <h3 class="txt">
-            Jaipur
-        </h3> -->
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
-        <!-- <h3 class="txt">
-            Bangalore
-        </h3> -->
-        <div class="overlay"></div> 
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/fc/agra.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/10/a3/3b/8a/screenshot-2017-09-12.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    <a href="list.html"> <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" style="height:150px;width:150px;border-radius:25px;" alt="image" />
+    
+    <div class="overlay"></div> 
     </div>
     <br>
     <br>
