--- a/list.html
+++ b/list.html
@@ -245,5 +245,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjN2HozyHDE4ybD_IzOnzBwWl
         <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
         </div>
     </footer>
+    <script src="scripts/list.js"></script>
+      <script src="scripts/common.js"></script>
     </body>
 </html>
