--- a/detail.html
+++ b/detail.html
@@ -251,5 +251,7 @@
     <a href="https://twitter.com" target="_blank"> <img src="assests/images/twitter.png" style="height:20px;width:22px;" /></a>
     </div>
 </footer>
+<script src="scripts/detail.js"></script>
+      <script src="scripts/common.js"></script>
 </body>
 </html>
